Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-3489

ZFS OSD missing OI iterator for scrub/LFSCK

XMLWordPrintable

    • 8772

      There is not yet an object table iterator for ZFS OSDs. This is needed in order to implement OI Scrub for ZFS (which would also allow a file-level backup of an ldiskfs-based MDT/OST to be restored into a newly-formatted ZFS filesystem) and verifying the Lustre namespace metadata (e.g. linkEA and FID-in-dirent).

      It is also needed for implementing the distributed MDT-OST verification for LFSCK Phase II, and MDT-MDT verification for DNE in LFSCK Phase III.

            bzzz Alex Zhuravlev
            adilger Andreas Dilger
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: