lustre/tests/sanity-lfsck.sh
@@ -17,12 +17,6 @@ init_test_env $@
 . ${CONFIG:=$LUSTRE/tests/cfg/$NAME.sh}
 init_logging
 
-# remove the check when ZFS backend iteration is ready
-[ $(facet_fstype $SINGLEMDS) != "ldiskfs" ] &&
-	skip "test LFSCK only for ldiskfs" && exit 0
-[ $(facet_fstype ost1) != ldiskfs ] &&
-	skip "test LFSCK only for ldiskfs" && exit 0
-
 require_dsh_mds || exit 0
 
 MCREATE=${MCREATE:-mcreate}
@@ -137,10 +131,10 @@ test_0() {
 
 	do_facet $SINGLEMDS $LCTL set_param fail_loc=0
 	do_facet $SINGLEMDS $LCTL set_param fail_val=0
-	sleep 3
-	STATUS=$($SHOW_NAMESPACE | awk '/^status/ { print $2 }')
-	[ "$STATUS" == "completed" ] ||
-		error "(9) Expect 'completed', but got '$STATUS'"
+	wait_update_facet $SINGLEMDS \
+		"$LCTL get_param -n mdd.${MDT_DEV}.lfsck_namespace | \
+		 awk '/^status/ { print \\\$2 }'" "completed" 20 || \
+		error "(9) unexpected status"
 
 	local repaired=$($SHOW_NAMESPACE |
 			 awk '/^updated_phase1/ { print $2 }')
@@ -149,11 +143,10 @@ test_0() {
 
 	local scanned1=$($SHOW_NAMESPACE | awk '/^success_count/ { print $2 }')
 	$START_NAMESPACE -r || error "(11) Fail to reset LFSCK!"
-	sleep 3
-
-	STATUS=$($SHOW_NAMESPACE | awk '/^status/ { print $2 }')
-	[ "$STATUS" == "completed" ] ||
-		error "(12) Expect 'completed', but got '$STATUS'"
+	wait_update_facet $SINGLEMDS \
+		"$LCTL get_param -n mdd.${MDT_DEV}.lfsck_namespace | \
+		 awk '/^status/ { print \\\$2 }'" "completed" 20 || \
+		error "(12) unexpected status"
 
 	local scanned2=$($SHOW_NAMESPACE | awk '/^success_count/ { print $2 }')
 	[ $((scanned1 + 1)) -eq $scanned2 ] ||
@@ -165,6 +158,9 @@ test_0() {
 run_test 0 "Control LFSCK manually"
 
 test_1a() {
+	[ $(facet_fstype $SINGLEMDS) != ldiskfs ] &&
+		skip "OI Scrub not implemented for ZFS" && return
+
 	lfsck_prep 1 1
 	echo "start $SINGLEMDS"
 	start $SINGLEMDS $MDT_DEVNAME $MOUNT_OPTS_SCRUB > /dev/null ||
@@ -202,6 +198,9 @@ run_test 1a "LFSCK can find out and repair crashed FID-in-dirent"
 
 test_1b()
 {
+	[ $(facet_fstype $SINGLEMDS) != ldiskfs ] &&
+		skip "OI Scrub not implemented for ZFS" && return
+
 	lfsck_prep 1 1
 	echo "start $SINGLEMDS"
 	start $SINGLEMDS $MDT_DEVNAME $MOUNT_OPTS_SCRUB > /dev/null ||
@@ -358,6 +357,9 @@ run_test 2c "LFSCK can find out and remove repeated linkEA entry"
 
 test_4()
 {
+	[ $(facet_fstype $SINGLEMDS) != ldiskfs ] &&
+		skip "OI Scrub not implemented for ZFS" && return
+
 	lfsck_prep 3 3
 	mds_backup_restore $SINGLEMDS || error "(1) Fail to backup/restore!"
 	echo "start $SINGLEMDS with disabling OI scrub"
@@ -409,6 +411,9 @@ run_test 4 "FID-in-dirent can be rebuilt after MDT file-level backup/restore"
 
 test_5()
 {
+	[ $(facet_fstype $SINGLEMDS) != ldiskfs ] &&
+		skip "OI Scrub not implemented for ZFS" && return
+
 	lfsck_prep 1 1 1
 	mds_backup_restore $SINGLEMDS 1 || error "(1) Fail to backup/restore!"
 	echo "start $SINGLEMDS with disabling OI scrub"
@@ -938,6 +943,9 @@ run_test 9b "LFSCK speed control (2)"
 
 test_10()
 {
+	[ $(facet_fstype $SINGLEMDS) != ldiskfs ] &&
+		skip "lookup(..)/linkea on ZFS issue" && return
+
 	lfsck_prep 1 1
 	echo "start $SINGLEMDS"
 	start $SINGLEMDS $MDT_DEVNAME $MOUNT_OPTS_SCRUB > /dev/null ||
@@ -1024,7 +1032,7 @@ ost_remove_lastid() {
 	# step 1: local mount
 	mount_fstype ost${ost} || return 1
 	# step 2: remove the specified LAST_ID
-	${rcmd} rm -fv $(facet_mntpt ost${ost})/O/${idx}/LAST_ID
+	${rcmd} rm -fv $(facet_mntpt ost${ost})/O/${idx}/{LAST_ID,d0/0}
 	# step 3: umount
 	unmount_fstype ost${ost} || return 2
 }
